test_files/negative/duplicates/dictionary.stats_strict
Not a PDF file
PDF error : The same name appears several times in dictionary : /Type !
